--- a/patient-service/pom.xml
+++ b/patient-service/pom.xml
@@ -65,6 +65,12 @@
 			<version>3.1.0</version> <!-- or latest stable -->
 		</dependency>
 
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>2.3.232</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
