--- a/patient-service/pom.xml
+++ b/patient-service/pom.xml
@@ -70,6 +70,12 @@
 			<artifactId>h2</artifactId>
 			<version>2.3.232</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.8.8</version>
+		</dependency>
+
 
 	</dependencies>
 
