--- a/patient-service/pom.xml
+++ b/patient-service/pom.xml
@@ -76,6 +76,12 @@
 			<version>2.8.8</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
 
 	</dependencies>
 
